--- a/public/views/newsEditor.html
+++ b/public/views/newsEditor.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="panel-footer">
-        <div class="btn-group pull-right">
+        <div class="btn-group pull-right" data-ng-if="mode == 'news'">
             <label class="ta-news-label" data-ng-model="editable.label" data-btn-radio="'1'" data-uncheckable><span
                     class="label label-warning pull-right">Обратите внимание</span></label>
             <label class="ta-news-label" data-ng-model="editable.label" data-btn-radio="'2'" data-uncheckable><span
