--- a/public/views/discipline.html
+++ b/public/views/discipline.html
@@ -6,55 +6,62 @@
     </div>
     <div class="row">
         <accordion close-others="oneAtATime" class="col-md-7">
-            <accordion-group data-ng-repeat="lesson in lectures" class="panel panel-info" is-open="status.open">
-                <accordion-heading><strong>{{$index+1}}.</strong> <span
-                        class="glyphicon glyphicon-eye-close" aria-hidden="true"
-                        data-ng-if="lesson.is_visible == 0" tooltip="Скрытый урок"></span> {{lesson.title}}
-                    <i class="pull-right glyphicon"
-                       data-ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-                </accordion-heading>
-                <p>{{lesson.description}}</p>
+            <div data-ng-repeat="lesson in lectures" style="margin-top: 5px">
+                <!--Editor -->
+                <news-editor mode="lecture" data-ng-if="editMode && lesson.lecture_id == idInDB"></news-editor>
+                <!-- //Editor -->
+                <accordion-group data-ng-if="!editMode || (editMode && lesson.lecture_id != idInDB)"
+                                 class="panel panel-info" is-open="status.open">
+                    <accordion-heading><strong>{{$index+1}}.</strong> <span
+                            class="glyphicon glyphicon-eye-close" aria-hidden="true"
+                            data-ng-if="lesson.is_visible == 0" tooltip="Скрытый урок"></span> {{lesson.title}}
+                        <i class="pull-right glyphicon"
+                           data-ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                    </accordion-heading>
+                    <p>{{lesson.description}}</p>
 
-                <div class="bs-callout bs-callout-primary" data-ng-repeat="atc in attachments"
-                     data-ng-if="lesson.lecture_id==atc.lecture_id">
-                    <h4><a href="{{atc.url}}"><span class="glyphicon glyphicon-cloud-download"
-                                                    aria-hidden="true"></span> {{atc.title}}</a></h4>
-                    {{atc.description}}
-                </div>
-                <br>
+                    <div class="bs-callout bs-callout-primary" data-ng-repeat="atc in attachments"
+                         data-ng-if="lesson.lecture_id==atc.lecture_id">
+                        <h4><a href="{{atc.url}}"><span class="glyphicon glyphicon-cloud-download"
+                                                        aria-hidden="true"></span> {{atc.title}}</a></h4>
+                        {{atc.description}}
+                    </div>
+                    <br>
 
-                <div class="accordion-footer">
+                    <div class="accordion-footer">
                     <span data-ng-repeat="result in results"
-                          data-ng-if="lesson.lecture_id==result.lecture_id && currentUser.userRole != 'admin' && !isEditor">
+                          data-ng-if="lesson.lecture_id==result.lecture_id && !canEdit">
                     <span data-ng-if="result.result==1"
                           class="pull-right">Зачтено <span class="glyphicon glyphicon-ok"
                                                            aria-hidden="true"></span>
                     </span>
-                    <span data-ng-if="result.result==0 && currentUser.userRole != 'admin'" class="pull-right">Не зачтено
+                    <span data-ng-if="result.result==0 && !canEdit" class="pull-right">Не зачтено
                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></span>
                     </span>
 
-                    <div class="pull-right">
-                        <button type="button" class="btn btn-primary btn-xs" data-ng-click="turnEditMode(n.news_id)"
-                                data-ng-if="currentUser.userRole == 'admin' || isEditor">
-                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                        </button>
-                        <button type="button" class="btn btn-danger btn-xs"
-                                data-ng-really-message="Вы собираетесь удалить запись <strong>«{{lesson.title}}»</strong> от {{lesson.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}} Будут также удалены вложения и результаты выполнения.<br>Продолжить?"
-                                data-ng-really-click="deletePost(lesson.lecture_id, $index)"
-                                data-ng-if="currentUser.userRole == 'admin' || isEditor">
-                            <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
-                        </button>
+                        <div class="pull-right">
+                            <button type="button" class="btn btn-primary btn-xs"
+                                    data-ng-click="turnEditMode(lesson.lecture_id, $index)"
+                                    data-ng-if="canEdit">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </button>
+                            <button type="button" class="btn btn-danger btn-xs"
+                                    data-ng-really-message="Вы собираетесь удалить запись <strong>«{{lesson.title}}»</strong> от {{lesson.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}} Будут также удалены вложения и результаты выполнения.<br>Продолжить?"
+                                    data-ng-really-click="deletePost(lesson.lecture_id, $index)"
+                                    data-ng-if="canEdit">
+                                <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                        <div class="hidden-xs">
+                            <em>Сдать до {{lesson.date_dead_line|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em>
+                        </div>
+                        <!-- Date formatting for small devices -->
+                        <div class="visible-xs">
+                            <em>Сдать до: {{lesson.date_dead_line|moment: 'lang': 'ru' | moment: 'format': 'L'}}</em>
+                        </div>
                     </div>
-                    <div class="hidden-xs">
-                        <em>Сдать до {{lesson.date_dead_line|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em>
-                    </div>
-                    <!-- Date formatting for small devices -->
-                    <div class="visible-xs">
-                        <em>Сдать до: {{lesson.date_dead_line|moment: 'lang': 'ru' | moment: 'format': 'L'}}</em>
-                    </div>
-                </div>
-            </accordion-group>
+                </accordion-group>
+            </div>
         </accordion>
         <div data-ui-calendar="uiConfig.calendar" class="col-md-5 col-xs-12" data-ng-model="eventSources"
              data-calendar="lecturesCalendar"></div>
