--- a/public/views/header.html
+++ b/public/views/header.html
@@ -34,7 +34,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right" data-ng-if="isAuthenticated()">
                     <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-expanded="false">{{currentUser.name}}<span class="caret"></span></a>
+                                            aria-expanded="false">{{currentUser.userName}}<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="">Профиль (NYI)</a></li>
                             <li class="divider"></li>
