--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,30 +1,65 @@
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
-<div class="modal-dialog">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h4 class="modal-title" id="loginLabel">Авторизация</h4>
-        </div>
-        <div class="modal-body">
-            <form class="form-signin" method="post" name="loginForm" data-ng-Submit="login(credentials)">
-                <div style="margin-bottom: 25px" class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input id="login-username" type="text" class="form-control" name="username" value=""
-                           placeholder="Логин" required autofocus data-ng-model="credentials.username">
-                </div>
-                <div style="margin-bottom: 25px" class="input-group">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input id="login-password" type="password" class="form-control" name="password" placeholder="Пароль"
-                           required data-ng-model="credentials.pass">
-                </div>
-                <!--TODO: -->
-                <!--<div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Запомнить меня
-                    </label>
-                </div>-->
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
-            </form>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="pull-right btn btn-default" data-ng-click="toReg()" data-ng-if="auth">Регистрация
+                </button>
+                <button class="pull-right btn btn-default" data-ng-click="toAuth()" data-ng-if="reg">Авторизация
+                </button>
+                <h4 class="modal-title" data-ng-if="auth">Авторизация</h4>
+                <h4 class="modal-title" data-ng-if="reg">Регистрация</h4>
+            </div>
+            <div class="modal-body">
+                <!-- AUTH FORM -->
+                <form class="form-signin" method="post" name="loginForm" data-ng-Submit="login(credentials)"
+                      data-ng-if="auth">
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="login-username" type="text" class="form-control" name="username" value=""
+                               placeholder="Логин" required autofocus data-ng-model="credentials.username">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="login-password" type="password" class="form-control" name="password"
+                               placeholder="Пароль"
+                               required data-ng-model="credentials.pass">
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" value="remember-me"> Запомнить меня
+                        </label>
+                    </div>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+                </form>
+                <!-- REGISTRATION FORM -->
+                <form class="form-signin" method="post" name="regForm" data-ng-Submit="regUser(regData)"
+                      data-ng-if="reg">
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="reg-username" type="text" class="form-control" name="username"
+                               placeholder="Логин" required autofocus data-ng-model="regData.username">
+                    </div>
+                    <div class="input-group" style="margin-bottom: 25px">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="reg-password" type="password" class="form-control" name="password"
+                               placeholder="Пароль"
+                               required data-ng-model="regData.pass">
+                    </div>
+                    <div style="margin-bottom: 15px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-education"></i></span>
+                        <input id="reg-group" type="text" class="form-control" name="group"
+                               placeholder="Название группы. Например: 4ИС, 3ТОП" required
+                               data-ng-model="regData.group">
+                    </div>
+                    <div style="margin-bottom: 25px" class="form-group">
+                        <label for="reg-passcode">Кодовое слово: </label>
+                        <input id="reg-passcode" type="text" class="form-control" name="passcode"
+                               placeholder="Кодовое слово можно получить у преподавателя" required
+                               data-ng-model="regData.passcode">
+                    </div>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 </div>
