--- a/public/views/login.html
+++ b/public/views/login.html
@@ -26,7 +26,8 @@
                     </div>
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" value="remember-me"> Запомнить меня
+                            <input type="checkbox" value="remember-me" data-ng-model="credentials.rememberMe"> Запомнить
+                            меня
                         </label>
                     </div>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
