--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,3 +196,49 @@ body
     opacity:1;
     top: -5px;
 }
+
+.animate-if.ng-enter, .animate-if.ng-leave {
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.animate-if.ng-enter,
+.animate-if.ng-leave.ng-leave-active {
+    opacity:0;
+}
+
+.animate-if.ng-leave,
+.animate-if.ng-enter.ng-enter-active {
+    opacity:1;
+}
+
+.swipe-enter.ng-enter,
+.swipe-enter.ng-move {
+    -webkit-transition: 0.5s linear all;
+    transition: 0.5s linear all;
+    position:relative;
+}
+
+.swipe-enter.ng-enter {
+    top:-10px;
+    opacity:0;
+}
+.swipe-enter.ng-enter.ng-enter-active {
+    top:0;
+    opacity:1;
+}
+
+.animate-enter.ng-enter {
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.7s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.7s;
+}
+
+.animate-enter.ng-enter,
+.animate-enter.ng-leave.ng-leave-active {
+    opacity:0;
+}
+
+.animate-enter.ng-leave,
+.animate-enter.ng-enter.ng-enter-active {
+    opacity:1;
+}
