Refactoring. Saga. Part 2: Services

--- a/public/app/layout/header.html
+++ b/public/app/layout/header.html
@@ -21,15 +21,16 @@
                             href="" class="dropdown-toggle" data-toggle="dropdown" role="button"
                             aria-expanded="false">Мои курсы<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li data-ng-if="wrap.currentUser.userRole=='admin' || wrap.currentUser.userRole=='teacher'"><a
-                                    href="#/class/edit/0">Создать курс</a></li>
+                            <li data-ng-if="wrap.currentUser.userRole=='admin' || wrap.currentUser.userRole=='teacher'">
+                                <a href="#/class/edit/0">Создать курс</a></li>
                             <li data-ng-if="wrap.currentUser.userRole=='admin' || wrap.currentUser.userRole=='teacher'"
                                 class="divider"></li>
                             <li data-ng-repeat="discipline in wrap.disciplines"><a
                                     href="#/class/{{discipline.discipline_id}}">{{discipline.title}}</a></li>
                         </ul>
                     </li>
-                    <li><a data-ng-click="wrap.openSubs()" data-ng-if="wrap.currentUser.userRole != 'admin' && wrap.isAuthenticated()"
+                    <li><a data-ng-click="wrap.newSubModal()"
+                           data-ng-if="wrap.currentUser.userRole != 'admin' && wrap.isAuthenticated()"
                            href="">Использовать
                         код</a></li>
                     <li class="dropdown"
@@ -37,7 +38,7 @@
                         <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Мои
                             группы<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="" data-ng-click="wrap.newGroup()">Создать группу</a></li>
+                            <li><a href="" data-ng-click="wrap.newGroupModal()">Создать группу</a></li>
                             <li class="divider"></li>
                             <li data-ng-repeat="group in wrap.groups"><a
                                     href="#/group/{{group.group_id}}">{{group.title}}</a></li>
