Refactoring. Saga. Part 6: Modals

--- a/public/app/layout/header.html
+++ b/public/app/layout/header.html
@@ -31,8 +31,7 @@
                     </li>
                     <li><a data-ng-click="wrap.newSubModal()"
                            data-ng-if="wrap.currentUser.userRole != 'admin' && wrap.isAuthenticated()"
-                           href="">Использовать
-                        код</a></li>
+                           href="">Использовать код</a></li>
                     <li class="dropdown"
                         data-ng-if="wrap.currentUser.userRole == 'admin' || wrap.currentUser.userRole == 'teacher'">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Мои
